; ModuleID = '/home/carl/AnghaBench/git/extr_dir.c_do_invalidate_gitignore.c'
source_filename = "/home/carl/AnghaBench/git/extr_dir.c_do_invalidate_gitignore.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.untracked_cache_dir = type { i32, %struct.untracked_cache_dir**, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.untracked_cache_dir*)* @do_invalidate_gitignore to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_invalidate_gitignore(%struct.untracked_cache_dir* %0) #0 {
  %2 = alloca %struct.untracked_cache_dir*, align 8
  %3 = alloca i32, align 4
  store %struct.untracked_cache_dir* %0, %struct.untracked_cache_dir** %2, align 8
  %4 = load %struct.untracked_cache_dir*, %struct.untracked_cache_dir** %2, align 8
  %5 = getelementptr inbounds %struct.untracked_cache_dir, %struct.untracked_cache_dir* %4, i32 0, i32 3
  store i64 0, i64* %5, align 8
  %6 = load %struct.untracked_cache_dir*, %struct.untracked_cache_dir** %2, align 8
  %7 = getelementptr inbounds %struct.untracked_cache_dir, %struct.untracked_cache_dir* %6, i32 0, i32 2
  store i64 0, i64* %7, align 8
  store i32 0, i32* %3, align 4
  br label %8

8:                                                ; preds = %22, %1
  %9 = load i32, i32* %3, align 4
  %10 = load %struct.untracked_cache_dir*, %struct.untracked_cache_dir** %2, align 8
  %11 = getelementptr inbounds %struct.untracked_cache_dir, %struct.untracked_cache_dir* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = icmp slt i32 %9, %12
  br i1 %13, label %14, label %25

14:                                               ; preds = %8
  %15 = load %struct.untracked_cache_dir*, %struct.untracked_cache_dir** %2, align 8
  %16 = getelementptr inbounds %struct.untracked_cache_dir, %struct.untracked_cache_dir* %15, i32 0, i32 1
  %17 = load %struct.untracked_cache_dir**, %struct.untracked_cache_dir*** %16, align 8
  %18 = load i32, i32* %3, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds %struct.untracked_cache_dir*, %struct.untracked_cache_dir** %17, i64 %19
  %21 = load %struct.untracked_cache_dir*, %struct.untracked_cache_dir** %20, align 8
  call void @do_invalidate_gitignore(%struct.untracked_cache_dir* %21)
  br label %22

22:                                               ; preds = %14
  %23 = load i32, i32* %3, align 4
  %24 = add nsw i32 %23, 1
  store i32 %24, i32* %3, align 4
  br label %8

25:                                               ; preds = %8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
